1999-05-03  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* main.cc (main): Store glc as callback data for menu items.

	* autowidget.h (class auto_widget): Removed.  Also remove all uses
	by replacing with GtkObject_ptr.

	* main.cc (main): Use GtkObject_ptr.

	* autowidget.h (template class GtkObject_ptr): New class template.

	* main.cc (main): Make a vbox and a menu bar.

	* gtkrc: Removed.

	* Makefile.am (pkgdata_DATA): Removed.
	(EXTRA_DIST): Remove gtkrc.

	* glclock.h (class glclock): Update members.
	(class glclock): Remove member t.

	* glclock.cc (glclock): Remove setting of t.
	(update): Keep the current time in a function-local variable.
	(update) [!HAVE_GETTIMEOFDAY]: Use timeout_rate.
	(handle_destroy_event, handle_configure_event, finish_realize):
	Removed.
	(update) [HAVE_GETTIMEOFDAY]: Add comments.
	(glclock): Disable the unimplemented menu item.

	* main.cc (main): Use create_widget.

	* glclock.h: Add comments.
	(class glclock): Update member functions.
	(class glclock): Add data members: widgets and menu_parent.
	(class glclock): Remove member drawing_area.

	* glclock.cc: Include <algorithm>.
	(create_widget, remove_widget): New function.
	(operator GtkWidget *): Removed.
	(~glclock): Disconnect all signals for each widget.
	(~glclock): Unref context.
	(glclock): Remove the drawing area creation.
	(update): Handle all widgets.
	(update): Create GL context if not created.
	(handle_button_event): Remember the parent widget in menu_parent
	on button-3 press.
	(menu_about, edit_options): Use menu_parent.

	* clockoptions.cc (apply): Change the update rate.  Modify the
	diagnostic log message.
	(create_widget): Use the current update rate.
	(general_options_page): New function.
	(clock_options_dialog): Add an argument.
	(create_widget): Modify the label1 text.

	* glclock.h (class general_options_page): Add new data member
	target and constructor.
	(class clock_options_dialog): Add an argument to constructor.
	Also update all callers.
