@@ -1,6 +1,8 @@
 1999-05-03  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>
 
 	* main.cc (main): Store glc as callback data for menu items.
+	(handle_delete_event): Removed.
+	(main): Make toplevel function-local.
 
 	* autowidget.h (class auto_widget): Removed.  Also remove all uses
 	by replacing with GtkObject_ptr.
